--- a/etc/mock_mozilla/fedora-15-x86_64-mozilla.cfg
+++ b/etc/mock_mozilla/fedora-15-x86_64-mozilla.cfg
@@ -4,7 +4,7 @@ config_opts['legal_host_arches'] = ('x86_64',)
 config_opts['chroot_setup_cmd'] = 'groupinstall buildsys-build'
 config_opts['dist'] = 'fc15'  # only useful for --resultdir variable subst
 config_opts['plugin_conf']['bind_mount_opts']['dirs'].append(('/builds/targets/fedora-15-x86_64-mozilla/builds/',
-                                                              '/'))
+                                                              '/builds/'))
 
 config_opts['yum.conf'] = """
 [main]
