--- a/etc/mock_mozilla/mozilla-f15-x86_64.cfg
+++ b/etc/mock_mozilla/mozilla-f15-x86_64.cfg
@@ -1,17 +1,19 @@
-config_opts['root'] = 'fedora-15-x86_64-mozilla'
+config_opts['root'] = 'mozilla-f15-x86_64'
 config_opts['target_arch'] = 'x86_64'
 config_opts['legal_host_arches'] = ('x86_64',)
 config_opts['chroot_setup_cmd'] = 'groupinstall buildsys-build'
 config_opts['dist'] = 'fc15'  # only useful for --resultdir variable subst
-config_opts['plugin_conf']['bind_mount_opts']['dirs'].append(('/builds/targets/fedora-15-x86_64-mozilla/builds/',
+config_opts['plugin_conf']['bind_mount_opts']['dirs'].append(('/builds/targets/mozilla-f15-x86_64/builds/',
                                                               '/builds/'))
+#config_opts['basedir'] = '/builds/chroot/'
+config_opts['cache_topdir'] = '/builds/cache'
 
 config_opts['yum.conf'] = """
 [main]
-cachedir=/var/cache/yum
+cachedir=/builds/cache/yum
 debuglevel=1
 reposdir=/dev/null
-logfile=/var/log/yum.log
+logfile=/builds/mozilla-f15-x86_64/log/yum.log
 retries=20
 obsoletes=1
 gpgcheck=0
