--- a/etc/mock_mozilla/site-defaults.cfg
+++ b/etc/mock_mozilla/site-defaults.cfg
@@ -15,10 +15,10 @@
 #
 # Things that we recommend you set in site-defaults.cfg:
 #
-# config_opts['basedir'] = '/var/lib/mock/'
-# config_opts['cache_topdir'] = '/var/cache/mock'
+config_opts['basedir'] = '/builds/mock_mozilla'
+config_opts['cache_topdir'] = '/builds/mock_mozilla/cache'
 #  Note: the path pointed to by basedir and cache_topdir must be owned
-#        by group 'mock' and must have mode: g+rws
+#        by group 'mock_mozilla' and must have mode: g+rws
 # config_opts['rpmbuild_timeout'] = 0
 # config_opts['use_host_resolv'] = True
 
@@ -58,19 +58,19 @@
 # NOTE: Some of the caching options can theoretically affect build
 #  reproducability. Change with care.
 #
-# config_opts['plugin_conf']['ccache_enable'] = True
-# config_opts['plugin_conf']['ccache_opts']['max_cache_size'] = '4G'
-# config_opts['plugin_conf']['ccache_opts']['dir'] = "%(cache_topdir)s/%(root)s/ccache/"
-# config_opts['plugin_conf']['yum_cache_enable'] = True
-# config_opts['plugin_conf']['yum_cache_opts']['max_age_days'] = 30
-# config_opts['plugin_conf']['yum_cache_opts']['dir'] = "%(cache_topdir)s/%(root)s/yum_cache/"
-# config_opts['plugin_conf']['root_cache_enable'] = True
-# config_opts['plugin_conf']['root_cache_opts']['max_age_days'] = 15
-# config_opts['plugin_conf']['root_cache_opts']['dir'] = "%(cache_topdir)s/%(root)s/root_cache/"
-# config_opts['plugin_conf']['root_cache_opts']['compress_program'] = "pigz"
-# config_opts['plugin_conf']['root_cache_opts']['extension'] = ".gz"
-# config_opts['plugin_conf']['root_cache_opts']['exclude_dirs'] = ["./proc", "./sys", "./dev", 
-#                                                                  "./tmp/ccache", "./var/cache/yum" ]
+config_opts['plugin_conf']['ccache_enable'] = True
+config_opts['plugin_conf']['ccache_opts']['max_cache_size'] = '4G'
+config_opts['plugin_conf']['ccache_opts']['dir'] = "%(cache_topdir)s/%(root)s/ccache/"
+config_opts['plugin_conf']['yum_cache_enable'] = True
+config_opts['plugin_conf']['yum_cache_opts']['max_age_days'] = 30
+config_opts['plugin_conf']['yum_cache_opts']['dir'] = "%(cache_topdir)s/%(root)s/yum_cache/"
+config_opts['plugin_conf']['root_cache_enable'] = True
+config_opts['plugin_conf']['root_cache_opts']['max_age_days'] = 15
+config_opts['plugin_conf']['root_cache_opts']['dir'] = "%(cache_topdir)s/%(root)s/root_cache/"
+config_opts['plugin_conf']['root_cache_opts']['compress_program'] = "pigz"
+config_opts['plugin_conf']['root_cache_opts']['extension'] = ".gz"
+config_opts['plugin_conf']['root_cache_opts']['exclude_dirs'] = ["./proc", "./sys", "./dev", 
+                                                                  "./tmp/ccache", "./var/cache/yum" ]
 #
 # bind mount plugin is enabled by default but has no configured directories to mount
 # config_opts['plugin_conf']['bind_mount_enable'] = True
@@ -83,7 +83,7 @@
 #############################################################################
 #
 # Things that you can change, but we dont recommend it:
-# config_opts['chroothome'] = '/builddir'
+config_opts['chroothome'] = '/home/mock_mozilla'
 # config_opts['clean'] = True
 
 #############################################################################
@@ -125,5 +125,5 @@
 # config_opts['useradd'] = '/usr/sbin/useradd -m -u %(uid)s -g %(gid)s -d %(home)s -n %(user)s' # Fedora/RedHat
 #
 # Security related
-# config_opts['no_root_shells'] = False
+# config_opts['no_root_shells'] = True
 #
