--- a/etc/mock_mozilla/mozilla-f16-x86_64.cfg
+++ b/etc/mock_mozilla/mozilla-f16-x86_64.cfg
@@ -3,14 +3,14 @@ config_opts['target_arch'] = 'x86_64'
 config_opts['legal_host_arches'] = ('x86_64',)
 config_opts['chroot_setup_cmd'] = 'groupinstall buildsys-build'
 config_opts['dist'] = 'fc15'  # only useful for --resultdir variable subst
-config_opts['plugin_conf']['bind_mount_opts']['dirs'].append(('/builds/targets/%s/builds/' % config_opts['root'],
+config_opts['plugin_conf']['bind_mount_opts']['dirs'].append(('/builds/mock_mozilla/%s/builds/' % config_opts['root'],
                                                               '/builds/'))
 config_opts['yum.conf'] = """
 [main]
-cachedir=/builds/mock_mozilla/cache/yum
+cachedir=/var/cache/yum
 debuglevel=1
 reposdir=/dev/null
-logfile=/builds/mozilla-f16-x86_64/log/yum.log
+logfile=/var/log/yum.log
 retries=20
 obsoletes=1
 gpgcheck=0
