--- a/mock_mozilla.spec.in
+++ b/mock_mozilla.spec.in
@@ -41,17 +41,13 @@ make
 %install
 rm -rf $RPM_BUILD_ROOT
 make DESTDIR=$RPM_BUILD_ROOT install
-mkdir -p $RPM_BUILD_ROOT/var/lib/%{name}
-mkdir -p $RPM_BUILD_ROOT/var/cache/%{name}
+mkdir -p $RPM_BUILD_ROOT/builds/%{name}
 ln -s consolehelper $RPM_BUILD_ROOT/usr/bin/%{name}
 
 echo "%defattr(0644, root, %{name})" > %{name}.cfgs
 find $RPM_BUILD_ROOT%{_sysconfdir}/%{name} -name "*.cfg" \
     | sed -e "s|^$RPM_BUILD_ROOT|%%config(noreplace) |" >> %{name}.cfgs
 #cat %{name}.cfgs
-
-# just for %%ghosting purposes
-ln -s fedora-rawhide-x86_64.cfg $RPM_BUILD_ROOT%{_sysconfdir}/%{name}/default.cfg
 
 %clean
 rm -rf $RPM_BUILD_ROOT
@@ -62,17 +58,6 @@ if [ $1 -eq 1 ]; then
 fi
 
 %post
-# TODO: use dist and version of install system, not build one
-if [ ! -e %{_sysconfdir}/%{name}/default.cfg ] ; then
-    arch=$(uname -i)
-    for ver in %{?fedora}%{?rhel} rawhide ; do
-        cfg=%{?fedora:fedora}%{?rhel:epel}-$ver-$arch.cfg
-        if [ -e %{_sysconfdir}/%{name}/$cfg ] ; then
-            ln -s $cfg %{_sysconfdir}/%{name}/default.cfg
-            exit 0
-        fi
-    done
-fi
 # fix cache permissions from old installs
 chmod 2775 /builds/%{name}
 :
@@ -89,7 +74,6 @@ chmod 2775 /builds/%{name}
 
 # config files
 %dir  %{_sysconfdir}/%{name}
-%ghost %config(noreplace,missingok) %{_sysconfdir}/%{name}/default.cfg
 %config(noreplace) %{_sysconfdir}/%{name}/*.ini
 %config(noreplace) %{_sysconfdir}/pam.d/%{name}
 %config(noreplace) %{_sysconfdir}/security/console.apps/%{name}
